--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "third-party/pcm"]
 	path = third-party/pcm
 	url = https://github.com/intel/pcm
+[submodule "third-party/cppzmq"]
+	path = third-party/cppzmq
+	url = https://github.com/zeromq/cppzmq
