--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ include_directories(third-party ${THIRD_PARTY_INCLUDES})
 
 add_third_party(googletest)
 add_third_party(spdlog)
+add_third_party(cppzmq)
 add_third_party(pybind11)
 add_third_party(pcm)
 
