Trying to fix server build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_third_party(googletest)
 add_third_party(spdlog)
 
 set(CPPZMQ_BUILD_TESTS off)
+set(ZMQ_BUILD_DRAFT_API 1)
 add_third_party(cppzmq)
 add_third_party(pybind11)
 add_third_party(pcm)
