--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,12 @@ include_directories(third-party ${THIRD_PARTY_INCLUDES})
 add_third_party(googletest)
 add_third_party(spdlog)
 
-set(CPPZMQ_BUILD_TESTS off)
-set(ZMQ_BUILD_DRAFT_API 0)
-add_third_party(cppzmq)
+find_package(cppzmq QUIET)
+if(NOT cppzmq_FOUND)
+    set(CPPZMQ_BUILD_TESTS off)
+    add_third_party(cppzmq)
+endif()
+
 add_third_party(pybind11)
 add_third_party(pcm)
 
