--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,6 +45,8 @@ repos:
     hooks:
       - id: clang-format
         args: ["--style=file", "-i"]
+        additional_dependencies:
+          [clang-format==15.0.7]
       # - id: oclint
       # - id: uncrustify
       # DO NOT RUN: see comment below (in the local hook description).
@@ -53,6 +55,8 @@ repos:
       #  args: ["--config-file=knp/.clang-tidy",  "-extra-arg-before=-xc++", "-extra-arg=-std=c++17", "-p=build"]
       - id: cppcheck
         args: ["-x", "c++", "--suppress-xml=knp/.cppcheck-suppress.xml"]  # --cppcheck-build-dir=build]
+        additional_dependencies:
+          [cppcheck-codequality==1.3.1]
       - id: cpplint
         args: ["--root", "knp"]
         additional_dependencies:
@@ -203,7 +207,6 @@ repos:
       - id: pydocstringformatter
         exclude: *fixtures
         args: ["--max-summary-lines=2", "--linewrap-full-docstring"]
-        files: "pylint"
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.4
@@ -251,3 +254,8 @@ repos:
     rev: "0.7.16"
     hooks:
      - id: mdformat
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
