--- a/knp/autodoc/Doxyfile.in
+++ b/knp/autodoc/Doxyfile.in
@@ -698,7 +698,7 @@ FILE_VERSION_FILTER    =
 # DoxygenLayout.xml, doxygen will parse it automatically even if the LAYOUT_FILE
 # tag is left empty.
 
-LAYOUT_FILE            =
+LAYOUT_FILE            = @DOXYGEN_SRCDIR@/DoxygenLayout.xml
 
 # The CITE_BIB_FILES tag can be used to specify one or more bib files containing
 # the reference definitions. This must be a list of .bib files. The .bib
@@ -1144,8 +1144,8 @@ HTML_FOOTER            = @DOXYGEN_SRCDIR@/footer.html
 # list). For an example see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/doxygen-awesome.css 
-   # 
+HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/doxygen-awesome.css
+   #
    # \ @DOXYGEN_SRCDIR@/styles/doxygen-awesome-sidebar-only.css
 
 # The HTML_EXTRA_FILES tag can be used to specify one or more extra images or
@@ -2431,7 +2431,7 @@ MAX_DOT_GRAPH_DEPTH    = 0
 # The default value is: NO.
 # This tag requires that the tag HAVE_DOT is set to YES.
 
-DOT_TRANSPARENT        = NO
+DOT_TRANSPARENT        = YES
 
 # Set the DOT_MULTI_TARGETS tag to YES to allow dot to generate multiple output
 # files in one run (i.e. multiple -o and -T options on the command line). This
