--- a/knp/autodoc/Doxyfile.in
+++ b/knp/autodoc/Doxyfile.in
@@ -1144,7 +1144,9 @@ HTML_FOOTER            = @DOXYGEN_SRCDIR@/footer.html
 # list). For an example see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/doxygen-awesome.css # @DOXYGEN_SRCDIR@/styles/doxygen-awesome-sidebar-only.css
+HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/doxygen-awesome.css \
+    @DOXYGEN_SRCDIR@/styles/decapitalize.css
+# @DOXYGEN_SRCDIR@/styles/doxygen-awesome-sidebar-only.css
 
 # The HTML_EXTRA_FILES tag can be used to specify one or more extra images or
 # other source files which should be copied to the HTML output directory. Note
