Doxygen generation was moved into "autodoc" directory

--- a/knp/CMakeLists.txt
+++ b/knp/CMakeLists.txt
@@ -18,4 +18,5 @@ add_subdirectory(devices-library)
 add_subdirectory(backends)
 add_subdirectory(base-framework)
 add_subdirectory(python-framework)
+add_subdirectory(autodoc)
 add_subdirectory(tests)
