--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -182,6 +182,7 @@ repos:
             "tomlkit>=0.10.1",
             "types-pkg_resources==0.1.3",
             "types-all",
+            "types-attrs",
             "types-requests",
             "types-dataclasses >= 0.1.3",
             "types-PyYAML",
