Multiple devices selection implemented

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -14,4 +14,6 @@ root=knp
 #  Is this a non-const reference? If so, make const or use a pointer: PopulationType &population.
 # - build/c++11 - don't check headers blacklisted by Google.
 #  Chromium team uses own headers instead of standard.
-filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references,-build/c++11
+# - whitespace/newline
+#  An else should appear on the same line as the preceding }
+filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references,-build/c++11,-whitespace/newline
