--- a/knp/backends/CMakeLists.txt
+++ b/knp/backends/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.22)
 file(GLOB backends LIST_DIRECTORIES true "[a-zA-Z0-9_]*-backend")
 
 if(NOT backends)
-    message(WARNING "No backends was found!")
+    message(WARNING "No backends were found!")
     return()
 endif()
 
