--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-synapse-traits LANGUAGES C CXX)
 add_library("${PROJECT_NAME}" INTERFACE include/knp/synapse-traits/delta.h)
-add_library(KNP::synapse_traits ALIAS "${PROJECT_NAME}")
+add_library(KNP::Synapse::Traits ALIAS "${PROJECT_NAME}")
 target_include_directories("${PROJECT_NAME}" INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
