--- a/knp/autodoc/Doxyfile.in
+++ b/knp/autodoc/Doxyfile.in
@@ -1374,9 +1374,9 @@ HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/doxygen-awesome.css \
     @DOXYGEN_SRCDIR@/styles/custom.css \
     @DOXYGEN_SRCDIR@/styles/doxygen-awesome-sidebar-only-darkmode-toggle.css \
     @DOXYGEN_SRCDIR@/styles/custom-alternative.css \
-    @DOXYGEN_SRCDIR@/styles/decapitalize.css \
     @DOXYGEN_SRCDIR@/styles/search-height-fix.css \
     @DOXYGEN_SRCDIR@/styles/icons.css \
+# @DOXYGEN_SRCDIR@/styles/decapitalize.css \
 # @DOXYGEN_SRCDIR@/styles/doxygen-awesome-sidebar-only.css
 
 # The HTML_EXTRA_FILES tag can be used to specify one or more extra images or
