Documentation logo fixed

--- a/knp/autodoc/CMakeLists.txt
+++ b/knp/autodoc/CMakeLists.txt
@@ -23,7 +23,7 @@ if(KNP_BUILD_DOCUMENTATION)
         OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/doc_doxygen"
         INPUT "${CMAKE_SOURCE_DIR}/knp"
         EXAMPLE_PATH "knp/tests"
-        PROJECT_LOGO "${CMAKE_CURRENT_SOURCE_DIR}/logo.svg"
+        PROJECT_LOGO "${CMAKE_CURRENT_SOURCE_DIR}/icons/logo.svg"
         SOURCE_BROWSER YES
         BUNDLE_ID "com.kaspersky.KNP"
         PUBLISHER_NAME "Kaspersky Lab"
