--- a/knp/autodoc/Doxyfile.in
+++ b/knp/autodoc/Doxyfile.in
@@ -797,7 +797,7 @@ FILE_VERSION_FILTER    =
 # DoxygenLayout.xml, doxygen will parse it automatically even if the LAYOUT_FILE
 # tag is left empty.
 
-LAYOUT_FILE            = @DOXYGEN_SRCDIR@/DoxygenLayout.xml
+LAYOUT_FILE            = @DOXYGEN_SRCDIR@/common_files/DoxygenLayout.xml
 
 # The CITE_BIB_FILES tag can be used to specify one or more bib files containing
 # the reference definitions. This must be a list of .bib files. The .bib
@@ -918,7 +918,8 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @DOXYGEN_INPUT@
+INPUT                  = @DOXYGEN_SRCDIR@ \
+    @DOXYGEN_INPUT@
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -1017,7 +1018,7 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = @DOXYGEN_EXCLUDE_PATTERNS@
+EXCLUDE                =  @DOXYGEN_SRCDIR@/common_files @DOXYGEN_SRCDIR@/cmake @DOXYGEN_SRCDIR@/CMakeLists.txt
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -1033,7 +1034,7 @@ EXCLUDE_SYMLINKS       = NO
 # Note that the wildcards are matched against the file with absolute path, so to
 # exclude all test directories for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       =
+EXCLUDE_PATTERNS       = @DOXYGEN_EXCLUDE_PATTERNS@
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
@@ -1330,7 +1331,7 @@ HTML_FILE_EXTENSION    = .html
 # of the possible markers and block names see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_HEADER            = @DOXYGEN_SRCDIR@/header.html
+HTML_HEADER            = @DOXYGEN_SRCDIR@/common_files/header.html
 
 # The HTML_FOOTER tag can be used to specify a user-defined HTML footer for each
 # generated HTML page. If the tag is left blank doxygen will generate a standard
@@ -1340,7 +1341,7 @@ HTML_HEADER            = @DOXYGEN_SRCDIR@/header.html
 # that doxygen normally uses.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_FOOTER            = @DOXYGEN_SRCDIR@/footer.html
+HTML_FOOTER            = @DOXYGEN_SRCDIR@/common_files/footer.html
 
 # The HTML_STYLESHEET tag can be used to specify a user-defined cascading style
 # sheet that is used by each HTML page. It can be used to fine-tune the look of
@@ -1370,14 +1371,15 @@ HTML_STYLESHEET        =
 # documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/doxygen-awesome.css \
-    @DOXYGEN_SRCDIR@/styles/custom.css \
-    @DOXYGEN_SRCDIR@/styles/doxygen-awesome-sidebar-only-darkmode-toggle.css \
-    @DOXYGEN_SRCDIR@/styles/custom-alternative.css \
-    @DOXYGEN_SRCDIR@/styles/search-height-fix.css \
-    @DOXYGEN_SRCDIR@/styles/icons.css \
-# @DOXYGEN_SRCDIR@/styles/decapitalize.css \
-# @DOXYGEN_SRCDIR@/styles/doxygen-awesome-sidebar-only.css
+HTML_EXTRA_STYLESHEET  = \
+    @DOXYGEN_SRCDIR@/common_files/styles/doxygen-awesome.css \
+    @DOXYGEN_SRCDIR@/common_files/styles/custom.css \
+    @DOXYGEN_SRCDIR@/common_files/styles/doxygen-awesome-sidebar-only-darkmode-toggle.css \
+    @DOXYGEN_SRCDIR@/common_files/styles/custom-alternative.css \
+    @DOXYGEN_SRCDIR@/common_files/styles/search-height-fix.css \
+    @DOXYGEN_SRCDIR@/common_files/styles/icons.css \
+# @DOXYGEN_SRCDIR@/common_files/styles/decapitalize.css \
+# @DOXYGEN_SRCDIR@/common_files/styles/doxygen-awesome-sidebar-only.css
 
 # The HTML_EXTRA_FILES tag can be used to specify one or more extra images or
 # other source files which should be copied to the HTML output directory. Note
@@ -1388,21 +1390,21 @@ HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/doxygen-awesome.css \
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
 HTML_EXTRA_FILES       = @DOXYGEN_HTML_EXTRA_FILES@ \
-    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-300Italic.otf \
-    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-300.otf \
-    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-500Italic.otf \
-    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-500.otf \
-    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-700.otf \
-    @DOXYGEN_SRCDIR@/fonts/museo-sans.css \
-    @DOXYGEN_SRCDIR@/js/doxygen-awesome-darkmode-toggle.js \
-    @DOXYGEN_SRCDIR@/js/doxygen-awesome-fragment-copy-button.js \
-    @DOXYGEN_SRCDIR@/js/doxygen-awesome-paragraph-link.js \
-    @DOXYGEN_SRCDIR@/js/toggle-alternative-theme.js \
-    @DOXYGEN_SRCDIR@/js/doxygen-awesome-interactive-toc.js \
-    @DOXYGEN_SRCDIR@/js/doxygen-awesome-tabs.js \
-    @DOXYGEN_SRCDIR@/js/icons-add-properties.js \
-    @DOXYGEN_SRCDIR@/icons/symbol-class.svg \
-    @DOXYGEN_SRCDIR@/icons/symbol-namespace.svg
+    @DOXYGEN_SRCDIR@/common_files/fonts/exljbris---MuseoSansCyrl-300Italic.otf \
+    @DOXYGEN_SRCDIR@/common_files/fonts/exljbris---MuseoSansCyrl-300.otf \
+    @DOXYGEN_SRCDIR@/common_files/fonts/exljbris---MuseoSansCyrl-500Italic.otf \
+    @DOXYGEN_SRCDIR@/common_files/fonts/exljbris---MuseoSansCyrl-500.otf \
+    @DOXYGEN_SRCDIR@/common_files/fonts/exljbris---MuseoSansCyrl-700.otf \
+    @DOXYGEN_SRCDIR@/common_files/fonts/museo-sans.css \
+    @DOXYGEN_SRCDIR@/common_files/js/doxygen-awesome-darkmode-toggle.js \
+    @DOXYGEN_SRCDIR@/common_files/js/doxygen-awesome-fragment-copy-button.js \
+    @DOXYGEN_SRCDIR@/common_files/js/doxygen-awesome-paragraph-link.js \
+    @DOXYGEN_SRCDIR@/common_files/js/toggle-alternative-theme.js \
+    @DOXYGEN_SRCDIR@/common_files/js/doxygen-awesome-interactive-toc.js \
+    @DOXYGEN_SRCDIR@/common_files/js/doxygen-awesome-tabs.js \
+    @DOXYGEN_SRCDIR@/common_files/js/icons-add-properties.js \
+    @DOXYGEN_SRCDIR@/common_files/icons/symbol-class.svg \
+    @DOXYGEN_SRCDIR@/common_files/icons/symbol-namespace.svg
 
 # The HTML_COLORSTYLE tag can be used to specify if the generated HTML output
 # should be rendered with a dark or light theme.
