Documentation checking enabled

--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-neuron-traits LANGUAGES C CXX)
 
+include(knp-functions)
+
 add_library("${PROJECT_NAME}" INTERFACE include/knp/neuron-traits/blifat.h)
 add_library(KNP::Neuron::Traits ALIAS "${PROJECT_NAME}")
 target_include_directories("${PROJECT_NAME}" INTERFACE
