--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-synapse-traits LANGUAGES C CXX)
+
+include(knp-functions)
+
 add_library("${PROJECT_NAME}" INTERFACE include/knp/synapse-traits/delta.h)
 add_library(KNP::Synapse::Traits ALIAS "${PROJECT_NAME}")
 target_include_directories("${PROJECT_NAME}" INTERFACE
