Network class stub added

--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -16,7 +16,12 @@ file(GLOB_RECURSE ${PROJECT_NAME}_headers include/knp/framework/*.h)
 source_group(source REGULAR_EXPRESSION "impl/.*")
 source_group(headers FILES ${${PROJECT_NAME}_headers} REGULAR_EXPRESSION "include/.*")
 
-knp_add_library("${PROJECT_NAME}-core" SHARED impl/backend_loader.cpp ${${PROJECT_NAME}_headers})
+knp_add_library("${PROJECT_NAME}-core"
+    SHARED
+    impl/backend_loader.cpp
+    impl/network.cpp
+
+    ${${PROJECT_NAME}_headers})
 add_library(KNP::BaseFramework::Core ALIAS "${PROJECT_NAME}-core")
 
 target_link_libraries("${PROJECT_NAME}-core" PRIVATE spdlog::spdlog_header_only Boost::headers Boost::filesystem)
