Network class populations and projections containers implemented

--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -8,7 +8,12 @@ project(knp-neuron-traits LANGUAGES C CXX)
 
 include(knp-functions)
 
-add_library("${PROJECT_NAME}" INTERFACE include/knp/neuron-traits/blifat.h)
+add_library("${PROJECT_NAME}"
+    INTERFACE
+    include/knp/neuron-traits/type_traits.h
+    include/knp/neuron-traits/blifat.h
+    include/knp/neuron-traits/all_traits.h
+)
 add_library(KNP::Neuron::Traits ALIAS "${PROJECT_NAME}")
 target_include_directories("${PROJECT_NAME}" INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
