--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -8,8 +8,14 @@ project(knp-synapse-traits LANGUAGES C CXX)
 
 include(knp-functions)
 
-add_library("${PROJECT_NAME}" INTERFACE include/knp/synapse-traits/delta.h)
+add_library("${PROJECT_NAME}"
+    INTERFACE
+    include/knp/synapse-traits/type_traits.h
+    include/knp/synapse-traits/delta.h
+    include/knp/synapse-traits/all_traits.h
+)
 add_library(KNP::Synapse::Traits ALIAS "${PROJECT_NAME}")
+
 target_include_directories("${PROJECT_NAME}" INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
