Minor changes, message to string

--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -24,6 +24,7 @@ knp_add_library("${PROJECT_NAME}"
     impl/projection.cpp
     impl/message_bus.cpp
     impl/message_endpoint.cpp
+    impl/messaging.cpp
     ${${PROJECT_NAME}_headers}
     )
 add_library(KNP::Core ALIAS "${PROJECT_NAME}")
