Message bus implementation separated

--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -26,6 +26,10 @@ knp_add_library("${PROJECT_NAME}"
     impl/projection.cpp
     impl/message_bus.cpp
     impl/message_endpoint.cpp
+    impl/message_bus_zmq_impl/message_bus_impl.h
+    impl/message_bus_zmq_impl/message_endpoint_impl.h
+    impl/message_bus_zmq_impl/message_bus_impl.cpp
+    impl/message_bus_zmq_impl/message_endpoint_impl.cpp
     impl/message_header.cpp
     impl/spike_message.cpp
     impl/synaptic_impact_message.cpp
