--- a/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
@@ -21,7 +21,11 @@ source_group(headers REGULAR_EXPRESSION "include/.*")
 knp_add_library("${PROJECT_NAME}"
     SHARED
     impl/backend.cpp
+
+    impl/blifat_population.h
     impl/blifat_population.cpp
+
+    impl/delta_synapse_projection.h
     impl/delta_synapse_projection.cpp
 
     ${${PROJECT_NAME}_headers}
