--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -31,9 +31,12 @@ knp_add_library("${PROJECT_NAME}"
     impl/message_bus_zmq_impl/message_bus_impl.cpp
     impl/message_bus_zmq_impl/message_endpoint_impl.cpp
     impl/message_header.cpp
+    impl/messaging/message_envelope.cpp
+    impl/messaging/spike_message_impl.h
     impl/messaging/spike_message.cpp
-    impl/subscription.cpp
+    impl/messaging/synaptic_impact_message_impl.h
     impl/messaging/synaptic_impact_message.cpp
+    impl/subscription.cpp
 
     ${${PROJECT_NAME}_headers}
     )
