--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -21,6 +21,7 @@ knp_add_library("${PROJECT_NAME}-core"
     impl/backend_loader.cpp
     impl/network.cpp
     impl/model.cpp
+    impl/model_executor.cpp
 
     ${${PROJECT_NAME}_headers})
 add_library(KNP::BaseFramework::Core ALIAS "${PROJECT_NAME}-core")
