--- a/knp/autodoc/Doxyfile.in
+++ b/knp/autodoc/Doxyfile.in
@@ -1420,7 +1420,9 @@ HTML_EXTRA_FILES       = @DOXYGEN_HTML_EXTRA_FILES@ \
                          @DOXYGEN_SRCDIR@/common_files/js/doxygen-awesome-tabs.js \
                          @DOXYGEN_SRCDIR@/common_files/js/icons-add-properties.js \
                          @DOXYGEN_SRCDIR@/common_files/icons/symbol-class.svg \
-                         @DOXYGEN_SRCDIR@/common_files/icons/symbol-namespace.svg
+                         @DOXYGEN_SRCDIR@/common_files/icons/symbol-namespace.svg \
+                         @DOXYGEN_SRCDIR@/common_files/icons/symbol-class_white.svg \
+                         @DOXYGEN_SRCDIR@/common_files/icons/symbol-namespace_white.svg
 
 # The HTML_COLORSTYLE tag can be used to specify if the generated HTML output
 # should be rendered with a dark or light theme.
