Common CPU backends functions moved to the separate library

--- a/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
@@ -21,13 +21,6 @@ source_group(headers REGULAR_EXPRESSION "include/.*")
 knp_add_library("${PROJECT_NAME}"
     SHARED
     impl/backend.cpp
-
-    impl/blifat_population.h
-    impl/blifat_population.cpp
-
-    impl/delta_synapse_projection.h
-    impl/delta_synapse_projection.cpp
-
     ${${PROJECT_NAME}_headers}
 )
 
@@ -35,3 +28,4 @@ add_library(KNP::Backends::CPUMultiThreaded ALIAS "${PROJECT_NAME}")
 
 target_link_libraries("${PROJECT_NAME}" PRIVATE Boost::headers spdlog::spdlog_header_only)
 target_link_libraries("${PROJECT_NAME}" PUBLIC KNP::Core KNP::Devices::CPU)
+target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::Backends::CPU::Library)
