--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -22,6 +22,7 @@ knp_add_library("${PROJECT_NAME}-core"
     impl/network.cpp
     impl/model.cpp
     impl/model_executor.cpp
+    impl/output_channel.cpp
 
     ${${PROJECT_NAME}_headers})
 add_library(KNP::BaseFramework::Core ALIAS "${PROJECT_NAME}-core")
