Split thread context to source/header pair

--- a/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
@@ -20,7 +20,7 @@ source_group(headers REGULAR_EXPRESSION "include/.*")
 
 knp_add_library("${PROJECT_NAME}"
     SHARED
-    impl/backend.cpp
+    impl/backend.cpp impl/tools/src/thread_pool_context.cpp
     ${${PROJECT_NAME}_headers}
 )
 
