--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -14,6 +14,8 @@ add_library("${PROJECT_NAME}"
     include/knp/synapse-traits/delta.h
     include/knp/synapse-traits/all_traits.h
     include/knp/synapse-traits/output_types.h
+    include/knp/synapse-traits/stdp.h
+    include/knp/synapse-traits/stdp_add_rule.h
 )
 add_library(KNP::Synapse::Traits ALIAS "${PROJECT_NAME}")
 
