CPU backends initialization was moved into cpu-library

--- a/knp/backends/cpu/cpu-library/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-library/CMakeLists.txt
@@ -18,6 +18,7 @@ file(GLOB_RECURSE ${PROJECT_NAME}_headers include/knp/backends/cpu-library/*.h)
 knp_add_library("${PROJECT_NAME}"
     STATIC
 
+    impl/init.cpp
     impl/blifat_population.cpp
     impl/delta_synapse_projection.cpp
 
