STDP code separated

--- a/knp/backends/cpu/cpu-library/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-library/CMakeLists.txt
@@ -20,7 +20,9 @@ knp_add_library("${PROJECT_NAME}"
 
     impl/init.cpp
     impl/blifat_population.cpp
+    impl/delta_synapse_projection_impl.h
     impl/delta_synapse_projection.cpp
+    impl/additive_stdp_delta_synapse.cpp
 
     ${${PROJECT_NAME}_headers}
     )
