Add some monitoring routines

--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -16,6 +16,8 @@ include(clang-tidy)
 include(knp-functions)
 
 file(GLOB_RECURSE ${PROJECT_NAME}_headers include/knp/core/*.h)
+file(GLOB_RECURSE ${PROJECT_NAME}_headers include/knp/monitoring/*.h)
+
 
 set(${PROJECT_NAME}_FB_SOURCES
     impl/messaging/fbs/message_envelope.fbs
