STDP synaptic resource rule stub added

--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library("${PROJECT_NAME}"
     include/knp/synapse-traits/output_types.h
     include/knp/synapse-traits/stdp.h
     include/knp/synapse-traits/stdp_add_rule.h
+    include/knp/synapse-traits/stdp_synaptic_resource_rule.h
 )
 add_library(KNP::Synapse::Traits ALIAS "${PROJECT_NAME}")
 
